--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       content="G H S J U L I A  N | Ghs Julian | Web Developer And Designer | Ghs Julian Programmer | PHP Developer & Programmer | Programmer Ghs Julian"
     />
     <title>Ghs</title>
-    <link rel="stylesheet" type="text/css" href="css/w3.css" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet" type="text/css" href="css/login.css" />
-    <link rel="stylesheet" href="css/w3-theme-teal2.css" />
+    <link rel="stylesheet" type="text/css" href="w3.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="login.css" />
+    <link rel="stylesheet" href="w3-theme-teal2.css" />
     <script src="router.js"></script>
-    <script type="module" src="./js/MAIN.JS"></script>
+    <script type="module" src="./MAIN.JS"></script>
   </head>
   <body class="w3-light-grey">
     <div id="app">
@@ -39,7 +39,7 @@
         <div class="d-flex flex-column">
           <div class="profile">
             <img
-              src="images/logo1.png"
+              src="./logo1.png"
               alt=""
               class="img-fluid rounded-circle"
             />
@@ -82,8 +82,8 @@
       <div id="main" class="w3-container w3-center"></div>
       <!---------------->
     </div>
-    <script type="module" src="./js/nav.js"></script>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./nav.js"></script>
+    <script type="module" src="./index.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
