--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
               <div class="w3-container">
                 <center>
                   <div class="ghs_profile">
-                    <img src="images/logo1.png" /><br />
+                    <img src="./logo1.png" /><br />
                     <strong>Ghs Julian </strong>
                     <h3>Web Developer</h3>
 
